[project]
name = "kidney-cancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.20.0",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "jax>=0.4.38",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "numpyro>=0.16.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]
